--- a/QuickTransport/Web.config
+++ b/QuickTransport/Web.config
@@ -18,7 +18,7 @@
     <add key="EnableSSL" value="true"/>
     <add key="UseDefaultCredentials" value="false"/>
     <add key="SmtpUserName" value="deepak.vasudevan@outlook.com"/>
-    <add key="SmtpPassword" value="Lavy5678&amp;*"/>
+    <add key="SmtpPassword" value="4444"/>
     <add key="SmtpFrom" value="deepak.vasudevan@outlook.com"/>
     <add key="IsBodyHTML" value="true"/>
   </appSettings>
